--- a/REACT-VICTORIACALVO/package.json
+++ b/REACT-VICTORIACALVO/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
     "bootstrap": "^5.2.3",
+    "firebase": "^10.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
